syntax = "proto3";

message Blog {
  string id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog = 1; // will not contain an id
}

message CreateBlogResponse {
  Blog blog = 1; // will contain the id
}

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);
}